--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,9 @@
 name: Deploy gem
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   run_deploy:
@@ -10,24 +13,4 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: 'deployment pending'
-      uses: 'deliverybot/deployment-status@master'
-      with:
-        state: 'pending'
-        token: '${{ github.token }}'
-
-    - name: Deploying
-      run: echo Deploy completed
-
-    - name: 'deployment success'
-      if: success()
-      uses: 'deliverybot/deployment-status@master'
-      with:
-        state: 'success'
-        token: '${{ github.token }}'
-
-    - name: 'deployment failure'
-      if: failure()
-      uses: 'deliverybot/deployment-status@master'
-      with:
-        state: 'failure'
-        token: '${{ github.token }}'
+      run: echo Hi
