--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,11 +20,11 @@ jobs:
           echo 'Some setup finished'
           echo 'Tested successfully'
 
-  failed:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Run non-existent command
-        run: errrr
+  # failed:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Run non-existent command
+  #       run: errrr
 
   deploy:
     runs-on: ubuntu-latest
@@ -36,11 +36,11 @@ jobs:
           echo 'Precompile finished'
           echo 'Deployed successfully'
 
-  failed-deploy:
-    runs-on: ubuntu-latest
-    needs: [rspecs, tests, failed]
-    steps:
-      - name: Deploy app to production
-        run: |
-          echo 'Precompile finished'
-          echo 'Deployed successfully'
+  # failed-deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: [rspecs, tests, failed]
+  #   steps:
+  #     - name: Deploy app to production
+  #       run: |
+  #         echo 'Precompile finished'
+  #         echo 'Deployed successfully'
